# namiview-agents

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: triage-image.yml
agents/triage/: Dockerfile  README.md  pyproject.toml
agents/triage/src/namiview_triage/: __init__.py  __main__.py  agent.py  prompt.py  server.py
agents/triage/src/namiview_triage/tools/: __init__.py  github.py  k8s.py
agents/triage/tests/: test_agent_wiring.py  test_github_tool.py  test_k8s_tools.py  test_server.py  test_smoke.py
shared/: pyproject.toml
shared/src/namiview_shared/: __init__.py  agent.py  claude.py  logging.py  tool.py
shared/tests/: test_agent.py  test_smoke.py  test_tool.py
