[project]
name = "namiview-shared"
version = "0.1.0"
description = "Shared primitives for Namiview agents: Claude client, tool-use loop, logging."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/namiview_shared"]
