[project]
name = "namiview-triage"
version = "0.1.0"
description = "Incident-triage AI agent for the namiview EKS cluster."
requires-python = ">=3.13"
dependencies = [
    "namiview-shared",
    "kubernetes>=30.0",
    "httpx>=0.27",
]

[project.scripts]
namiview-triage = "namiview_triage.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/namiview_triage"]
